# scrapyard

./: Cargo.toml  README.md  flake.nix  treefmt.nix
kvs/: Cargo.toml  README.md  build.rs  test.wal
kvs/api/flat/: messages.fbs
kvs/src/: client.rs  engine.rs  error.rs  lib.rs  messages.rs  server.rs
kvs/src/engine/: kvs.rs
kvs/src/engines/: kvs.rs
kvs/src/messages/: messages_generated.rs
kvs/tests/: cli.rs  tests.rs
src/: client.rs  config.rs  error.rs  lib.rs  messages.rs  server.rs
src/engine/: kvs.rs  sled.rs
tests/: tests.rs
