[package]
name = "kvs"
author = "alexmorenocano@gmail.com"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"

[lib]
test = false
doctest = false

[[bin]]
name = "kvs"
test = false
doctest = false
