[package]
name = "kvs"
author = "alexmorenocano@gmail.com"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
flatbuffers = "25.12.19"
flatc-rust = "0.2.0"
rand = "0.9.2"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde-jsonlines = "0.7.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.1.2"
criterion = "0.8.1"
predicates = "3.1.3"
tempfile = "3.24.0"

[lib]
test = false
doctest = false

[[bin]]
name = "kvs-client"
test = false
doctest = false

[[bin]]
name = "kvs-server"
test = false
doctest = false

[build-dependencies]
flatc-rust = "*"
